<resources>
    <string name="app_name">Rivi</string>
    <string name="app_subtitle">Questions. Every day.</string>
    <string name="new_subject">New Subject</string>
    <string name="add_subject_title">Add New Subject</string>
    <string name="subject_name_hint">Subject Name (e.g., Biology)</string>
    <string name="exam_date_hint">Exam Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="streak_format">%d day streak</string>
    <string name="cards_due_format">%d cards due today</string>
    <string name="session_progress_format">%1$d / %2$d</string>
    <string name="tap_to_flip">Tap to flip</string>
    <string name="add_card_title">Add Flashcard</string>
    <string name="question_hint">Question</string>
    <string name="answer_hint">Answer</string>
    <string name="no_cards_message">No cards in this subject. Add some to start studying!</string>
    <string name="manage_cards">Manage Cards</string>
    <string name="export_subject">Export Subject</string>
    <string name="import_subject">Import Subject</string>
    <string name="delete_card">Delete Card</string>
    <string name="recap_title">Session Complete</string>
    <string name="recap_subtitle">You have mastered %d concepts today.</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="easy">Easy</string>
    <string name="good">Good</string>
    <string name="hard">Hard</string>
    <string name="again">Again</string>
    <string name="add_new_card">Add new card</string>
</resources>
