<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.SessionRecapActivity">

    <TextView
        android:id="@+id/text_recap_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recap_title"
        android:textAppearance="@style/TextAppearance.Rivi.Academic"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_recap_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_recap_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recap_subtitle"
        android:textAppearance="@style/TextAppearance.Rivi.UI"
        android:textColor="@color/rivi_text_secondary"
        app:layout_constraintBottom_toTopOf="@id/btn_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_recap_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish"
        style="@style/Widget.Rivi.Button.Solid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:padding="16dp"
        android:text="@string/back_to_dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_recap_subtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
